force-app/main/default/objects/Trailhead_Leaderboard_Settings__c/Trailhead_Leaderboard_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trailhead Leaderboard Settings</label>
</CustomObject>