force-app/main/default/objects/Trailhead_Leaderboard_Settings__c/fields/Finish_Message__c.field-meta.xml
<CustomField>
    <fullName>Finish_Message__c</fullName>
    <defaultValue>&apos;Time!&apos;</defaultValue>
    <label>Finish Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>