force-app/main/default/objects/Trailhead_Leaderboard_Settings__c/fields/Header_Message__c.field-meta.xml
<CustomField>
    <fullName>Header_Message__c</fullName>
    <defaultValue>&apos;Countdown to earn Trailhead Points!&apos;</defaultValue>
    <label>Header Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>