force-app/main/default/objects/Trailhead_Leaderboard_Settings__c/fields/Target_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_Time__c</fullName>
    <description>The needs to be in format like: 07/25/2015 1:00 PM UTC-0400</description>
    <inlineHelpText>The needs to be in format like: 07/25/2015 1:00 PM UTC-0400</inlineHelpText>
    <label>Target Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>